Fix overlapping name and duplicate Engineer text

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -187,7 +187,7 @@
   margin: 0;
   letter-spacing: 2px;
   font-size: 28px;
-  line-height: 28px;
+  line-height: 1.1;
   font-weight: 500;
   font-family: "Geist", sans-serif;
 }
@@ -281,7 +281,7 @@ h2.landing-info-h2 {
 
   .landing-intro h1 {
     font-size: 30px;
-    line-height: 30px;
+    line-height: 1.1;
   }
 
   .landing-info h2 {
@@ -305,7 +305,7 @@ h2.landing-info-h2 {
 
   .landing-intro h1 {
     font-size: 40px;
-    line-height: 35px;
+    line-height: 1.1;
   }
 
   .landing-info h3 {
@@ -379,7 +379,7 @@ h2.landing-info-h2 {
 
   .landing-intro h1 {
     font-size: 60px;
-    line-height: 55px;
+    line-height: 1.1;
   }
 
   .landing-info h3 {
